# propalloc

./: .clang-tidy  CMakeLists.txt  README.md  azure-pipelines.yml
examples/: CMakeLists.txt
include/propalloc/: memory.hpp  vector.hpp
tests/: CMakeLists.txt  vector.cpp
